# vcpkg-example

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
cmake/: ProjectCoost.cmake  ProjectVcpkg.cmake
